[package]
name = "superbru"
version = "0.1.0"
authors = ["stringhandler <mikethetike@tari.com>"]
edition = "2021"

[dependencies]
tari_template_abi = { git = "https://github.com/stringhandler/tari-dan.git", branch = "st-scaffold2", package = "tari_template_abi" }
tari_template_lib = { git = "https://github.com/stringhandler/tari-dan.git", branch = "st-scaffold2", package = "tari_template_lib" }
# log = "*"

[profile.release]
opt-level = 's'     # Optimize for size.
lto = true          # Enable Link Time Optimization.
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic.
strip = "debuginfo" # Strip debug info.

[lib]
crate-type = ["cdylib", "lib"]
